Fix image width on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -311,7 +311,7 @@ body {
 	}
 
 .main_project_container img {
-    max-width: 550px;
+    max-width: 100%;
 }
 
 #timecode {
